[gd_scene load_steps=6 format=2]

[ext_resource path="res://MainMenu.gd" type="Script" id=1]
[ext_resource path="res://StartMenu.gd" type="Script" id=2]
[ext_resource path="res://menu.tres" type="Theme" id=3]
[ext_resource path="res://assets/background/Green.jpg" type="Texture" id=4]
[ext_resource path="res://assets/MenuStage.png" type="Texture" id=5]

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="PanelContainer2" type="PanelContainer" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -512.0
margin_top = -600.0
margin_right = 512.0

[node name="Background" type="Sprite" parent="PanelContainer2"]
position = Vector2( 512, 312 )
scale = Vector2( 0.656903, 0.656904 )
texture = ExtResource( 4 )

[node name="CenterContainer" type="CenterContainer" parent="."]
margin_right = 1024.0
margin_bottom = 600.0

[node name="MenuStage" type="Sprite" parent="CenterContainer"]
position = Vector2( 614.875, 320.5 )
scale = Vector2( 0.559, 0.559 )
texture = ExtResource( 5 )

[node name="MenuStage2" type="Sprite" parent="CenterContainer"]
position = Vector2( -121, 341 )
scale = Vector2( 0.51775, 0.51775 )
texture = ExtResource( 5 )
flip_h = true

[node name="MainMenu" type="VBoxContainer" parent="."]
anchor_top = 1.0
anchor_bottom = 1.0
margin_left = 40.0
margin_top = -280.0
margin_right = 186.0
margin_bottom = -120.0
grow_vertical = 2
alignment = 2
script = ExtResource( 1 )

[node name="StartButton" type="Button" parent="MainMenu"]
margin_top = 80.1
margin_right = 146.0
margin_bottom = 104.1
focus_neighbour_top = NodePath("../ExitButton")
theme = ExtResource( 3 )
text = "START GAME"
align = 0

[node name="OptionButon" type="Button" parent="MainMenu"]
margin_top = 108.0
margin_right = 146.0
margin_bottom = 132.0
theme = ExtResource( 3 )
text = "OPTIONS"
align = 0

[node name="ExitButton" type="Button" parent="MainMenu"]
margin_top = 136.0
margin_right = 146.0
margin_bottom = 160.0
focus_neighbour_bottom = NodePath("../StartButton")
theme = ExtResource( 3 )
text = "EXIT"
align = 0

[node name="StartMenu" type="VBoxContainer" parent="."]
visible = false
anchor_top = 1.0
anchor_bottom = 1.0
margin_left = 31.0
margin_top = -170.0
margin_right = 217.0
margin_bottom = -1.0
size_flags_horizontal = 15
size_flags_vertical = 15
alignment = 1
script = ExtResource( 2 )

[node name="StartButton" type="Button" parent="StartMenu"]
margin_top = 50.0
margin_right = 186.0
margin_bottom = 70.0
text = "CONTUNE GAME"

[node name="OptionButon" type="Button" parent="StartMenu"]
margin_top = 74.0
margin_right = 186.0
margin_bottom = 94.0
text = "NEW GAME"

[node name="ExitButton" type="Button" parent="StartMenu"]
margin_top = 98.0
margin_right = 186.0
margin_bottom = 118.0
text = "BACK"

[connection signal="pressed" from="MainMenu/StartButton" to="MainMenu" method="_on_StartButton_pressed"]
[connection signal="pressed" from="MainMenu/OptionButon" to="MainMenu" method="_on_OptionButon_pressed"]
[connection signal="pressed" from="MainMenu/ExitButton" to="MainMenu" method="_on_ExitButton_pressed"]
[connection signal="pressed" from="StartMenu/StartButton" to="StartMenu" method="_on_StartButton_pressed"]
